bug fix: top legend not showing

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -6,8 +6,3 @@
 .top-balance {
   margin-right: 3em;
 }
-
-.top-legend {
-  margin-left: 4px;
-  opacity: 80%;
-}
